# CustomGameEngine

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imgui.ini  my_app
_deps_external/glad/include/glad/: glad.h
_deps_external/glad/src/: glad.c
include/: EBO.h  VAO.h  VBO.h  shader.h  texture.h
resources/shaders/: default.frag  default.vert  sprite.frag  sprite.vert
src/: main.cpp
src/Core/Graphics/Draw/: Camera.h  SpriteBatch.h
src/Core/Graphics/Shader/: shader.cpp
src/Core/Graphics/Texture/: AssetManager.h  texture.cpp
src/Core/Graphics/Vertex/: VBO.cpp
src/Core/Player/: PlayerInput.h
src/Core/Scenes/: Scene.h  SceneManager.h
src/ECS/Components/: Camera.h  Context.h  Position.h  Size.h
src/ECS/Systems/: ChunkSystem.h  DebugSystem.h  DrawSystem.h
src/Resources/: TextureData.h
src/Resources/Shaders/: default.frag  default.vert
src/Scenes/: MenuScene.h
src/app/Core/Graphics/Draw/: SpriteBatch.h
src/app/Core/Graphics/Vertex/: EBO.cpp  VAO.cpp
src/app/Core/Player/: PlayerInput.h
src/app/Core/Scenes/: Scene.h  SceneManager.h
src/app/ECS/Components/: Context.h  Position.h  TextureComponent.h
src/app/ECS/Systems/: ChunkSystem.h  DrawSystem.h
src/app/Scenes/: MenuScene.h
src/server/: ServerMachine.h
src/server/ECS/Systems/: ServerSystem.h
